# ChangeLog for net-irc/unrealircd
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/ChangeLog,v 1.70 2008/08/23 01:20:34 cardoe Exp $

  17 Dec 2010; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  +unrealircd-3.2.9_rc1.ebuild, +files/unrealircd-3.2.9_rc1-destdir.patch,
  +files/unrealircd-3.2.9_rc1-libstrl.patch, files/unrealircd.rc,
  metadata.xml:
  Add unrealircd-3.2.9_rc1, reflecting upstream buildsystem changes. Fix
  initscript's suicides.

  15 Dec 2010; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  unrealircd-3.2.8.1-r2.ebuild:
  Revert the download URI.

  27 Nov 2010; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  +unrealircd-3.2.8.1-r2.ebuild, +files/unrealircd-3.2.8.1-libstrl.patch:
  hg Added unrealircd-3.2.8.1-r2, which causes unrealircd to be compiled
  against and use libstrl for strlcpy() and strlcat().

  20 Jun 2010; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> -unrealircd-3.2.8.1.ebuild,
  +unrealircd-3.2.8.1-r1.ebuild:
  Update ebuild to match portage version in many aspects but with a real
  upstream URI.

  09 May 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net>
  -unrealircd-3.2.7-r2.ebuild, -unrealircd-3.2.8.ebuild,
  unrealircd-3.2.8.1.ebuild:
  Removed old unrealircds - gentoo bug 260806, reduced KEYWORDS.

  14 Jan 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net> +unrealircd-system-tre.patch +unrealircd-system-cares.patch:
  Imported from portage tree, added patch that prevents unrealircd from statically linking to a bundled dev-libs/tre and net-dns/c-ares.
	
  23 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  11 Aug 2008; Ricardo Mendoza <ricmm@gentoo.org>
  unrealircd-3.2.7-r2.ebuild:
  Add ~mips, bug #199362

  22 Dec 2007; Ulrich Mueller <ulm@gentoo.org> -unrealircd-3.2.7.ebuild: