@@ -12,25 +12,24 @@ AUX unrealircd.confd 499 RMD160 666439c6e992d3314f8694ba58e8f3e018421f1c SHA1 5c
 AUX unrealircd.rc 792 RMD160 c9d0e1fd9b1d3ef885f05235288e72eabe48c5a0 SHA1 ba65f5ea6174373a3486d6ac231e409e2e25b00b SHA256 53d12d7180b543966795bc37645127ab2315637c4574b2db160861009fdda85e
 DIST Unreal3.2.8.1.tar.gz 2866456 RMD160 c8e76239e33ba170743f2ddae6bc24782064f105 SHA1 363c3c995bb38cf601f409610ce1937a0002c419 SHA256 009add8da68b6fb66608d06302e59fa9fb994f901cbd92e6f4f10963f2077741
 DIST Unreal3.2.9-rc1.tar.gz 3031711 RMD160 912490814c677abbebc949b1acb003f4f8036285 SHA1 5eb8fe77108ef1e7b4f26ddd8be3824bda47abfe SHA256 7c4754c8c1331754f671b5db9e866d46aa7fcb2942ece055e1250f256052f9a9
-EBUILD unrealircd-3.2.8.1-r1.ebuild 4830 RMD160 56403bfd13dd56aae5666722396acfbc9aa92b82 SHA1 054baab5e0975c4b92c3bd0ce63795e99a6651ff SHA256 89e2bfda5b13c76543cb4ebb7db0e956317e6a8e70956af186ce4fed38b88fd5
 EBUILD unrealircd-3.2.8.1-r2.ebuild 4736 RMD160 f2ca76b9403a78f3ac9788231f66e7ba8bae68bc SHA1 e1ac8521f1662d0d0a5c56df5f2ba261625382d3 SHA256 80b93e017fefac27587241a1cd83f9fb8d4dc2001453653a11b5f554acaa8934
 EBUILD unrealircd-3.2.9_rc1.ebuild 4276 RMD160 edeb3aafdb7412af79132e8e96c6ec86affc1a36 SHA1 b48b52165dcd24bd306071b84d91af19232b8d42 SHA256 0694c3d6c103906f60c1216d2f5647646380ced993ce029e3c15c3e55027e8ce
-MISC ChangeLog 11263 RMD160 04ffc796968314d1c1b86d896ad07417e1150de8 SHA1 30ee09e901abd1c8214d8d83f4deb0b0b294b9bc SHA256 7d63538e4c708a3065b5c6f916c4b0e263fd3b971a34f1e9a5d7971a8e831952
+MISC ChangeLog 11439 RMD160 563da501362a1e814d91f6b1c670893010751cb5 SHA1 bdd707a7f938fa2c76909bfa55fec2ba4ae496d9 SHA256 9dd0c637e85fbce82529e50fa3874c46a01eb4df874e8180657e6b68b03ca1b5
 MISC metadata.xml 947 RMD160 6add2b4036d26dc7bea4095d7f49350a6864ec69 SHA1 507bbd9ed2f0a62eaf266c264314b93fbc3bef02 SHA256 3b74e2fcf13d489a201fad08d1b6cb3981753a9218d0a245ca91dc39017dbb42
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQIcBAEBCAAGBQJNCrmMAAoJEHQ6UuhrqBBQOf8QAIKCqf662hnfuwhoouGXJUsu
-0ici4Pj1Tkcu471Qgn18itZOzsojYiba1Qf9qm8ATLxe7fn1847NX7wo/l5sQA0j
-F1i7bVNaNDLRkfRGx3W5OHckl8jWvdIDt9sgAQnstyxbKInMoM4IJlMFJSc+uyAj
-OoJDd7pU1c25sJU3eiyapR8mOSCL+cWcRcu6eDF0LmhTZTo/FV1rP8/Rmy4y5zZ0
-VPk92+TQlDCwiOhmt4RRoh683kUABeX/4vlNCRyelTXRS1qT4D67ImOVITGx81JS
-2GLZfoOoCwrGp5AGtTibyHYOfmCOmzyb+VGQ2GgK/n3KIZApRbK39zpMdHAAJnZS
-lHf0xElpNBObO/ZfkdO2ky/SUHX/+YQIzeCqCtfrUTzX30Q4XsH48ykulKm05vwS
-Gy/qOtso29sRxvkmSOjIcneYWGmim5J2k58/tSfMwep67AUo/gRkP2BBXd5Wz8Is
-XizpNNO8yxgY/PjeiVWM2ilDCCPRugFh/YjH4Vk36EY72TCKmijQaGDMb7MfwqX4
-B3A1F6xGSecnEkiUjG/Ubrw0oxxUwXCgvcqeWzcwhqjLgd1/RVwCN4Sp9VsB9QvV
-jlmmM0Rs0b7djAH5sruYIAt1039uEabpdlFvEJ+agrKk5npyuwu/gSrfdfJSlMiV
-9dUPVvkjikFuPfZu/rVB
-=sEaF
+iQIcBAEBCAAGBQJOELGkAAoJEHQ6UuhrqBBQQYQP/jyU188A3a/aI4HC5szp58V1
+X1ZjWgC6BhHNC8BExOnt4QWznbXcOz26uVXhEzT4qJBqLkW9Ypfs2fu/oa9j4nrJ
+Szk12NVkrY4C8bcnfXVZgxyJ136kqMfxQOwUN9zQyjhdfDldCJHUdks/SKt53Fm7
+xd+D2JoSs3QzQcW7p8mfqBgHORHv76vzWrIiVxQN8ZLpb6gXbzYKVwXqWMjcDJW8
+hl47/uPPUuDgLQzj8/U0Kd4LmV/8JqZphivN69m5qKgowGeNsHX92BXXyQaC9AGZ
+3m2oRQEsYFzyZSNtccrx1DhzUnhBt6U5Wlm0hEQW+HgWDSddUNKmReMFAXlBDu1t
+k7eIE4Qy6YYTtJvZnm+PkELf62lLzrzznD25KPJUj1krygSH1v+9ltNdWhFhZg/0
+ea6oV26PylnBRlmy7a5y4N2XrjSpGSaQlkQ9E+NbwZo+3S38l3+Px0FZxYqqMAVS
+2Q2ObxgwNyx03kttlSS5Mh1yGfapyEqrgwWHcw4Bm/VD2dmm21+Ok/6Eagf1Ei4i
+EhU29W3OL0f53qoHAUJDBfhMXU7/ZPjB9K3sbZcqLh1o+Ztaa8afNJRGaxHBUHKs
+aIq/d4BUeIVlXbJKaD9hzw3u7xDyshJVO2UBVWM79tfE5wqlX5MoZ11sNOSGXGPW
+1XhhlhoN+FmnZuIk0jeO
+=g+Q1
 -----END PGP SIGNATURE-----
