@@ -1,6 +1,11 @@
 # ChangeLog for net-irc/unrealircd
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/ChangeLog,v 1.70 2008/08/23 01:20:34 cardoe Exp $
+
+  02 Jul 2011; Nathan Phillip Brink <binki@gentoo.org>
+  -unrealircd-3.2.8.1-r1.ebuild:
+  Drop unreal-3.2.8.1-r1 which has been marked stable in gentoo-x86 per bug
+  #366867.
 
   17 Dec 2010; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
   +unrealircd-3.2.9_rc1.ebuild, +files/unrealircd-3.2.9_rc1-destdir.patch,
